media/pms/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pms
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - e.desertbluffs.com
  rules:
  - host: e.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: pms
          servicePort: 32400
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pms-webtools
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
spec:
  tls:
  - hosts:
    - b.desertbluffs.com
  rules:
  - host: b.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: pms
          servicePort: webtools
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pms-webtools-oauth2
  namespace: media
spec:
  tls:
  - hosts:
    - b.desertbluffs.com
  rules:
  - host: b.desertbluffs.com
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: oauth2-proxy
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pms
  namespace: media
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`e.desertbluffs.com`)
    kind: Rule
    services:
    - name: pms
      port: 32400
  tls:
    secretName: desertbluffs-tls

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`h.desertbluffs.com`)
    kind: Rule
    services:
    - name: sonarr
      port: 8989
  tls:
    secretName: desertbluffs-tls
